<resources>
    <string name="app_name">AndroidMentoringProgram</string>
    <string name="fragment1_first_string">Hello</string>
    <string name="fragment1_second_string">Andersen</string>
    <string name="rcView_item_string">Figure</string>
    <string name="menu_title">Menu</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="welcome">Welcome</string>
    <string name="song_name">Starry Night</string>
    <string name="song_artist">MMM</string>
    <string name="song_genre">Instrumental Pop</string>
    <string name="select_artist">Выбрать исполнителя</string>
    <string name="artist_selection">Выбрать исполнителя</string>
    <string name="genre_selection">Выбрать жанр</string>
    <string name="rcView_songs_item_string">Song name</string>
    <string name="news_topic">Software</string>
    <string name="news_author">author</string>
    <string name="news_title">title</string>
    <string name="news_source">source</string>
    <string name="news_date">published at</string>
    <string name="news_desc">description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="article_image_desc">article image description</string>
</resources>