<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="10dp"
    app:cardCornerRadius="10dp"
    tools:context=".thirdlesson.ArticleFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".thirdlesson.ArticleFragment">

        <TextView
            android:id="@+id/articleFragmentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/articles_margin"
            android:text="@string/news_title" />

        <TextView
            android:id="@+id/articleFragmentSource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/articles_margin"
            android:text="@string/news_source" />

        <TextView
            android:id="@+id/articleFragmentDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/articles_margin"
            android:text="@string/news_desc" />

    </LinearLayout>

</androidx.cardview.widget.CardView>