<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="10dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/articles_margin">

        <TextView
            android:id="@+id/rcViewNewsItemAuthor"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="@string/news_author"/>

        <TextView
            android:id="@+id/rcViewNewsItemTitle"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="@string/news_title"/>

        <TextView
            android:id="@+id/rcViewNewsItemDate"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="@string/news_date"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>

