<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/songInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_name" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_artist" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_genre" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/songInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/playButton"
            android:layout_width="@dimen/song_button_size"
            android:layout_height="@dimen/song_button_size"
            android:src="@drawable/ic_play"/>
        <ImageView
            android:id="@+id/pauseButton"
            android:layout_width="@dimen/song_button_size"
            android:layout_height="@dimen/song_button_size"
            android:src="@drawable/ic_pause"/>
        <ImageView
            android:id="@+id/stopButton"
            android:layout_width="@dimen/song_button_size"
            android:layout_height="@dimen/song_button_size"
            android:src="@drawable/ic_stop"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>